# sample-cicd-app

./: .gitignore  CMakeLists.txt  Containerfile  Containerfile.devspaces  README.md  devfile.yaml
include/: VehicleResource.h  VehicleService.h  VehicleState.h
public/: index.html
public/css/: dashboard.css
public/js/: dashboard.js
scripts/: download-deps.sh
src/: VehicleResource.cpp  VehicleService.cpp  VehicleState.cpp  main.cpp
test/: VehicleResourceTest.cpp  VehicleServiceTest.cpp  VehicleStateTest.cpp
